# card_shop_map_backend

./: pyproject.toml
card_shop_map/: db.sqlite3  manage.py
card_shop_map/apps/shops/: apps.py  models.py  urls.py  views.py
card_shop_map/apps/shops/migrations/: 0001_initial.py
card_shop_map/card_shop_map/: asgi.py  settings.py  urls.py  wsgi.py
